Added extra fields for stationboard request

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <!-- saved from url=(0019)http://lahacks.com/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1.0, maximum-scale=1.0">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="HackTrain's open source project for the Darwin REST interface">
+    <meta name="author" content="HackTrain">
+    <link rel="shortcut icon" href="http://hacktrain.com/img/index/hacktrain-icon-black.png">
 
   <!-- FB -->
   <meta property="og:title" content="HackTrain: Darwin REST API">
