--- a/documentation/index.html
+++ b/documentation/index.html
@@ -76,19 +76,19 @@
                     <p>
                         Currently data in the railway industry is scattered, fragmented and in too many
                         unstandardised formats. Often it takes longer to get your head around the setup
-                        than the actual implementation of the data. In order to allow smaller businesses
+                        than actually building your system. In order to allow smaller businesses
                         to have an opportunity to innovate, data is will be a <b>critical asset</b>
                     </p>
                     <br>
                     <br>
                     <h1>Innovating. <b>One Dataset</b> at a time.</h1>
                     <p>
-                        Although improving Darwin will not suffice - this data source from National Rail Enquiries
-                         is one of the
-                        most influential in the railway industry. Although there has been a lot of push 
-                        towards opening Darwin, it is still far from perfect. With this project we aim to
-                        improve the interface to interact with the data, and fundamentally improve 
-                        developer experience when starting with this API. 
+                        Although improving solely Darwin will not suffice - it is the best place to start as 
+                        this data source from National Rail Enquiries is one of the
+                        most influential in the railway industry. There has been a big push 
+                        towards opening Darwin's data to the public, it is still far from perfect. With this project we aim to
+                        improve the interface to interact with the data, and fundamentally enhance 
+                        developer experience when using this API for the first time. 
                     </p>
                     <br>
                     <br>
@@ -119,8 +119,8 @@
                         “Big Data is not about the data.”</h3>
 
                         <p>
-                            The railway industry does not lack large datasets - it has collosal amounts of data.
-                            The problem is that these datasets are fragmented, scattered, unavailable, and often in 
+                            The railway industry does not lack large datasets - it has colossal amounts of data.
+                            The problem is that these datasets are fragmented, unavailable, and often in 
                             non-standard formats that make it extremely hard to process.
                         </p>
                     </div>
