--- a/documentation/index.html
+++ b/documentation/index.html
@@ -77,7 +77,7 @@
                         Currently data in the railway industry is scattered, fragmented and in too many
                         unstandardised formats. Often it takes longer to get your head around the setup
                         than actually building your system. In order to allow smaller businesses
-                        to have an opportunity to innovate, data is will be a <b>critical asset</b>
+                        to have an opportunity to innovate, data is will be a <b>critical asset</b>.
                     </p>
                     <br>
                     <br>
