--- a/documentation/index.html
+++ b/documentation/index.html
@@ -66,43 +66,25 @@
 
             <section class="fullBleed" id="quote" style="margin-top: 0;">
                 <div class="align_bottom_container" style="min-height:360px; padding: 0px 100px">
-                    <h1>HackTrain's mission is to bring <b>Big Data</b> to rail.</h1>
                     <p>
-                        In order for the railway industry to be able to welcome innovation
-                        it is necessary that data is readily available, easy to reach, and
-                        in intuitive formats.
+                    <h3>
+                        The Darwin RESTful API is a community driven project supported by the HackTrain team - the code is open source, and available to any Trainhacker. You can get started by visiting the <a href="/docs">documentation</a>,
+                        or jumping straight to <a href="https://github.com/HackPartners/darwinrest">the code</a>.
+                    </h3>
                     </p>
                     <br>
+                    <br>
+                    <br>
+                    <h1>Big Data, Darwin, and the Railway Industry.</h1>
                     <p>
-                        Currently data in the railway industry is scattered, fragmented and in too many
-                        unstandardised formats. Often it takes longer to get your head around the setup
-                        than actually building your system. In order to allow smaller businesses
-                        to have an opportunity to innovate, data is will be a <b>critical asset</b>.
+                        Darwin is one of the most important datafeeds in the railway industry. It powers uncountable train operating companies and railway service providers, and allows them to deliver high quality train services that get us from A to B every day.
                     </p>
                     <br>
                     <br>
                     <h1>Innovating. <b>One Dataset</b> at a time.</h1>
                     <p>
-                        Although improving solely Darwin will not suffice - it is the best place to start as 
-                        this data source from National Rail Enquiries is one of the
-                        most influential in the railway industry. There has been a big push 
-                        towards opening Darwin's data to the public, it is still far from perfect. With this project we aim to
-                        improve the interface to interact with the data, and fundamentally enhance 
-                        developer experience when using this API for the first time. 
+                        Given the importance of this datafeed, the HackTrain kick-started the Darwin RESTful project - an unofficial Darwin REST interface supported by the HackTrain team. Our vision with this project is to empower trainhackers to build unique, revolutionary projects that will revolutionize the train industry.
                     </p>
-                    <br>
-                    <br>
-                    <h1 style="text-align:right">Join us on this journey to <b>digitise the industry.</b></h1>
-                    <p>
-                        This is an open source project, which means that any developer can join and
-                        contribute to the project. You can get started by visiting the <a href="/docs">documentation</a>,
-                        or jumping straight to <a href="https://github.com/HackPartners/darwinrest">the code</a>.
-                    </p>
-                    <br>
-                    <p>
-                        If you have any questions, please feel free to contact us at <a href="mailito:hello@hackpartners.com">hello@hackpartners.com</a>.
-                    </p>
-                    <br>
                     <br>
                     <br>
                 </div>
@@ -116,12 +98,10 @@
                         <h3 style=
                         "text-transform: uppercase; font-size: 30px; line-height: 39px;">
                         <br>
-                        “Big Data is not about the data.”</h3>
+                        Built by the community, for the community.</h3>
 
                         <p>
-                            The railway industry does not lack large datasets - it has colossal amounts of data.
-                            The problem is that these datasets are fragmented, unavailable, and often in 
-                            non-standard formats that make it extremely hard to process.
+                            The Darwin RESTful API is a community driven project - the code is open source, and available for any Trainhacker. Pull requests are more than welcome. We encourage trainhackers to contribute, as we look for this project to become as tailored as possible for the community itself.
                         </p>
                     </div>
 
