added title change

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -39,7 +39,7 @@
 				<h1 class="special">Darwin REST API</h1>
 				<p>
 					HackTrain's Open Source initiative.<br>
-					to improve the Darwin API.</p>
+					A RESTful Darwin interface.</p>
 			</div>
 		</div>
 		<div class="mainLinks">
