added changes requested

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -68,8 +68,9 @@
                 <div class="align_bottom_container" style="min-height:360px; padding: 0px 100px">
                     <p>
                     <h3>
-                        The Darwin RESTful API is a community driven project supported by the HackTrain team - the code is open source, and available to any Trainhacker. You can get started by visiting the <a href="/docs">documentation</a>,
-                        or jumping straight to <a href="https://github.com/HackPartners/darwinrest">the code</a>.
+                        The Darwin RESTful API is a community driven project to build a RESTful interface for the the Darwin Webservice - the code is open source, and available to any Trainhacker. You can get started by visiting the <a href="/docs">documentation</a>.
+                        Remember to get your <a href="http://realtime.nationalrail.co.uk/OpenLDBWSRegistration/">Darwin API Key</a>! If you have any questions, please feel free to contact us at <a href="mailito:hello@hackpartners.com">hello@hackpartners.com</a>.
+
                     </h3>
                     </p>
                     <br>
@@ -77,13 +78,13 @@
                     <br>
                     <h1>Big Data, Darwin, and the Railway Industry.</h1>
                     <p>
-                        Darwin is one of the most important datafeeds in the railway industry. It powers uncountable train operating companies and railway service providers, and allows them to deliver high quality train services that get us from A to B every day.
+                        Darwin is one of the key customer facing datafeeds used by the railway industry. It provides real-time train movement data to all franchised passenger train operating companies in the UK, as well as a host of other railway service providers. These datafeeds enable them to deliver high quality information about the train services that get us from A to B every day.
                     </p>
                     <br>
                     <br>
                     <h1>Innovating. <b>One Dataset</b> at a time.</h1>
                     <p>
-                        Given the importance of this datafeed, the HackTrain kick-started the Darwin RESTful project - an unofficial Darwin REST interface supported by the HackTrain team. Our vision with this project is to empower trainhackers to build unique, revolutionary projects that will revolutionize the train industry.
+                        The HackTrain kick-started the Darwin RESTful project - an unofficial Darwin REST interface supported by the HackTrain team. The vision behind this project is to enable all developers, including those unfamiliar with rail, to use and interpret the data from Darwin through a RESTful interface that provides data that in a common JSON format.  We aim to enable more trainhackers to capitalise on Darwin data and build unique, innovative projects that could revolutionise the rail industry.
                     </p>
                     <br>
                     <br>
